# Projet_ML

./: .gitignore  README.md  TODO.md  context.md  pyproject.toml  requirements.txt
config/: .pylintrc
docs/: gen_api_docs.py  mkdocs.yml
docs/docs/: index.md
notebooks/: 01_exploration_pretraitement.ipynb  02_reglog_calibration.ipynb  03_mlp_incertitude.ipynb  04_cnn_temperature_scaling.ipynb  05_moteur_decision_clinique.ipynb  06_tableau_bord_rapports.ipynb  07_analyse_performance_sad.ipynb  README.md
scripts/: run_flask_dashboard.py  run_task2.py  run_task3.py  run_task4.py  run_task5.py  run_training.py
src/cli/: __init__.py  accuracy_boost.py  accuracy_boost_simple.py  analyze_accuracy.py  dashboard.py  download_data.py  help.py  inference.py  t1_preprocess.py  t2_logistic_regression.py  t3_mlp_uncertainty.py  t4_cnn_temperature.py  t5_decision_engine.py
src/config/: config.py  settings.py  thresholds.py
src/data/: augment.py  loader.py  pipeline.py  preprocess.py
src/decision/: __init__.py  engine.py  rules.py  triage.py
src/enums/: dataclass.py  enums.py
src/evaluation/: __init__.py  analysis.py  costs.py  metrics.py
src/models/: calibration.py  cnn.py  log_reg.py  mlp.py  uncertainty.py  utils.py
src/pipeline/: infer.py  simulate.py  train.py
src/reporting/: __init__.py  report_generator.py  templates.py
tests/: test_calibration.py  test_decision_engine.py  test_evaluation.py  test_reporting.py
web/: README.md  dashboard.html  script.js  styles.css
