[project]
name = "Projet-ML"
version = "0.6.0"
description = "Brain tumor detection assistant system"
authors = [{ name = "MENON Valentin", email = "valentin.menon@efrei.net" }]
requires-python = ">=3.12, <4.0"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
pylint = "3.3.7"
black = "25.1.0"
radon = "6.0.1"
taskipy = "1.14.1"
ipykernel = "^7.2.0"

[tool.poetry.dependencies]
black = ">=25.1.0,<26.0.0"
tensorflow = "^2.20.0"
opencv-python = "^4.13.0.92"
matplotlib = "^3.10.8"
scikit-learn = "^1.8.0"
pandas = "^3.0.1"
flask = "^3.1.3"
reportlab = "^4.4.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocstrings = { extras = ["python"], version = "^1.0.0" }
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-gen-files = "^0.6.0"
mkdocs-literate-nav = "^0.6.2"
mkdocstrings-python = "^2.0.1"


[tool.taskipy.tasks]
# Training and project phases
dev = "python src/cli/t1_preprocess.py"
t1 = "python src/cli/t1_preprocess.py"
t2 = "python src/cli/t2_logistic_regression.py"
t3 = "python src/cli/t3_mlp_uncertainty.py"
t4 = "python src/cli/t4_cnn_temperature.py"
t5 = "python src/cli/t5_decision_engine.py"

# Accuracy improvements
boost = "python src/cli/accuracy_boost.py"
base64 = "python src/cli/accuracy_boost_simple.py"
analyze = "python src/cli/analyze_accuracy.py"

# Web interface
dashboard = "python src/cli/dashboard.py"

# Docs 
docs = "cd docs && mkdocs serve --dev-addr=localhost:8974"

# Code quality
radon = "radon cc src -na -s --exclude hardware_components_models && radon mi src --ignore hardware_components_models"
radon_raw = "radon raw src --ignore hardware_components_models"
radon_hal = "radon hal src --ignore hardware_components_models"
black = "black --config pyproject.toml src"
pylint = "pylint --rcfile config/.pylintrc --enable-all-extensions src"
lint = """
poetry run task black && \
poetry run task pylint
"""
vulture = "vulture src"

# Help
help = "python src/cli/help.py"

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
    .*\.pyi
    | build
    | dist
    | \.venv
    | \.git
    | \.mypy_cache
    | \.tox
    | \.eggs
    | \.pytest_cache
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
